Revert "半影着色-纯色法"
This reverts commit 8000069628ce8d169f8f2c12c795052177e39637.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -82,5 +82,5 @@ ManualIPAddress=
 
 [/Script/RenderDocPlugin.RenderDocPluginSettings]
 renderdoc.BinaryPath=D:\Program\RenderDoc
-renderdoc.AutoAttach=True
+renderdoc.AutoAttach=False
 
